--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
 
         <header>
           <h1>Analyze your microbiota sequencing data using a Galaxy-based framework</h1>
-          <h2>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM</a></h2>
+          <h2><em>Bérénice Batut, Thomas Eymard, Clémence Defois, Kévin Gravouil,
+            Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
+          <h3>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM 2016</a></h2>
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="assets/poster.pdf" class="button"><span>Download Poster</span></a>
+          <a href="assets/poster.pdf" id="download-pdf" class="button"><span>Download Poster</span></a>
+          <a href="https://github.com/ASaiM/framework" id="view-on-github" class="button"><span>View this project on GitHub</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
-          <p><em>Bérénice Batut, Thomas Eymard, Clémence Defois, Kévin Gravouil,
-            Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></p>
+
 
 <p>Nowadays, complex communities of microorganisms can be studied in depth with
 metagenomics and metatranscriptomics driven by evolution of sequencing techniques.
