Add doc link and some make up

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="assets/poster.pdf" id="download-pdf" class="button"><span>Download Poster</span></a>
-          <a href="https://github.com/ASaiM/framework" id="view-on-github" class="button"><span>View this project on GitHub</span></a>
+          <a href="assets/poster.pdf" class="button"><span>Download Poster</span></a>
+          <a href="https://github.com/ASaiM/framework" class="button"><span>View on GitHub</span></a>
+          <a href="http://asaim.readthedoc.org/" class="button"><span>Check the documentation</span></a>
         </section>
 
         <hr>
