--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="assets/poster.pdf" class="button"><span>Download Poster</span></a>
-          <a href="https://github.com/ASaiM/framework" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/ASaiM/framework" id="view-on-github" class="button"><span>View on GitHub</span></a>
           <a href="http://asaim.readthedoc.org/" class="button"><span>Check the documentation</span></a>
         </section>
 
@@ -64,6 +64,8 @@ accessible and sharable user-friendly tools. </p>
   build a complete modular, accessible, sharable and user-friendly framework to
   analyze sequence data using chosen tools and parameters.</p>
 
+
+
 <p>To overcome these limitations, we have developed ASaiM, an open-source
   opinionated Galaxy-based framework. It is accessible via a web-based interface
   to ease microbiota sequence data analyses for biologists. With a custom
@@ -90,6 +92,8 @@ accessible and sharable user-friendly tools. </p>
   outputs and statistical tests. All available tools, their versions are described
   in <a href="http://asaim.readthedocs.org/">ASaiM documentation</a>. These tools
   can be used alone or orchestrated inside workflows.</p>
+
+<img src="assets/asaim.png" alt="ASaiM logo">
 
 <p>To guide users and then ease exploitation of raw metagenomic or
   metatranscriptomic sequences, we propose a standard but customizable workflow.
