Move logo, make up botton

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="assets/poster.pdf" class="button"><span>Download Poster</span></a>
-          <a href="https://github.com/ASaiM/framework" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          <a href="http://asaim.readthedoc.org/" class="button"><span>Check the documentation</span></a>
+          <a href="assets/poster.pdf" class="button"><span>Download poster</span></a>
+          <a href="https://github.com/ASaiM/framework" class="button"><span>View on GitHub</span></a>
+          <a href="http://asaim.readthedoc.org/" class="button"><span>Check the docs</span></a>
         </section>
 
         <hr>
@@ -64,6 +64,7 @@ accessible and sharable user-friendly tools. </p>
   build a complete modular, accessible, sharable and user-friendly framework to
   analyze sequence data using chosen tools and parameters.</p>
 
+  <img src="assets/asaim.png" alt="ASaiM logo" width="200">
 
 
 <p>To overcome these limitations, we have developed ASaiM, an open-source
@@ -92,8 +93,6 @@ accessible and sharable user-friendly tools. </p>
   outputs and statistical tests. All available tools, their versions are described
   in <a href="http://asaim.readthedocs.org/">ASaiM documentation</a>. These tools
   can be used alone or orchestrated inside workflows.</p>
-
-<img src="assets/asaim.png" alt="ASaiM logo">
 
 <p>To guide users and then ease exploitation of raw metagenomic or
   metatranscriptomic sequences, we propose a standard but customizable workflow.
