--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <section id="main_content">
 
+<img src="assets/asaim.png" alt="ASaiM logo" width="200" align="middle">
 
 <p>Nowadays, complex communities of microorganisms can be studied in depth with
 metagenomics and metatranscriptomics driven by evolution of sequencing techniques.
@@ -63,9 +64,6 @@ accessible and sharable user-friendly tools. </p>
   (Taverna [15], Wings [16], Galaxy [17,18] or Kepler [19]). They can be used to
   build a complete modular, accessible, sharable and user-friendly framework to
   analyze sequence data using chosen tools and parameters.</p>
-
-  <img src="assets/asaim.png" alt="ASaiM logo" width="200">
-
 
 <p>To overcome these limitations, we have developed ASaiM, an open-source
   opinionated Galaxy-based framework. It is accessible via a web-based interface
