--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         <hr>
 
         <section id="main_content">
-
+<p>
 <img src="assets/asaim.png" alt="ASaiM logo" width="200" align="middle">
+</p>
 
-<p>Nowadays, complex communities of microorganisms can be studied in depth with
+<p>
+Nowadays, complex communities of microorganisms can be studied in depth with
 metagenomics and metatranscriptomics driven by evolution of sequencing techniques.
 Indeed, these meta’omics techniques offer insight concerning structure and
 functions of the studied communities. Notwithstanding, raw microbiota sequencing
