--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
           <h2><em>Bérénice Batut, Thomas Eymard, Clémence Defois, Kévin Gravouil,
             Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
           <h3>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM 2016</a></h2>
-          <img src="assets/asaim.png" alt="ASaiM logo" width="200" align="middle">
-
         </header>
 
         <section id="downloads" class="clearfix">
@@ -78,7 +76,9 @@ accessible and sharable user-friendly tools. </p>
 <h3>
 <a id="implementation" class="anchor" href="#implementation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Implementation</h3>
 
-<p>Based on a custom Galaxy instance, ASaiM framework is integrating tools,
+<p>
+  <p align="center"><img src="assets/asaim.png" alt="ASaiM logo" width="200"></p>
+  Based on a custom Galaxy instance, ASaiM framework is integrating tools,
   specifically chosen for metagenomic and metatranscriptomic studies and
   hierarchically organized to orient user choice toward the best tool for a given
   task. We integrate tools such as FastQ-Join [20] for paired-end assembly,
