--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ accessible and sharable user-friendly tools. </p>
   metabolic information from raw sequences). By its intrinsic modularity, ASaiM
   allows adjustment of workflows, tools parameters and used databases for general
   or specific analyses and provides therefore a powerful framework to easily and
-  rapidly analyze microbiota data in a reproducible and transparent environment.</p>
-
-<p align="center"><img src="assets/asaim.png" alt="ASaiM logo" width="200"></p>
+  rapidly analyze microbiota data in a reproducible and transparent environment.
+  <p align="center"><img src="assets/asaim.png" alt="ASaiM logo" width="200"></p>
+</p>
 
 <h3>
 <a id="implementation" class="anchor" href="#implementation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Implementation</h3>
