--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 
         <header>
           <h1>Analyze your microbiota sequencing data using a Galaxy-based framework</h1>
-          <h2><em>Bérénice Batut, Thomas Eymard, Clémence Defois, Kévin Gravouil,
-            Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
+          <h2><em><a href="http://bebatut.fr/">Bérénice Batut</a>, Clémence Defois, Kévin Gravouil, Cyrielle Gasc, Thomas Eymard,            Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
           <h3>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM 2016</a></h2>
         </header>
 
         <section id="downloads" class="clearfix">
           <a href="assets/poster.pdf" class="button"><span>Download poster</span></a>
           <a href="https://github.com/ASaiM/framework" class="button"><span>View on GitHub</span></a>
-          <a href="http://asaim.readthedoc.org/" class="button"><span>Check the docs</span></a>
+          <a href="http://asaim.readthedocs.io/en/latest/" class="button"><span>Check the docs</span></a>
         </section>
 
         <hr>
