Add asaim scheme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Analyze your microbiota sequencing data using a Galaxy-based framework</h1>
-          <h2><em><a href="http://bebatut.fr/">Bérénice Batut</a>, Clémence Defois, Kévin Gravouil, Cyrielle Gasc, Thomas Eymard,            Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
+          <h2><em><a href="http://bebatut.fr/">Bérénice Batut</a>, Clémence Defois, Kévin Gravouil, Cyrielle Gasc, Thomas Eymard, Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
           <h3>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM 2016</a></h2>
         </header>
 
@@ -102,11 +102,15 @@ accessible and sharable user-friendly tools. </p>
   using dedicated tools).  All choices (tools, version, parameters, execution
   order) are described in <a href="http://asaim.readthedocs.org/">ASaiM documentation</a>.
   Other workflows are also available for comparative analyses of taxonomic and/or
-  functional results obtained with the previously described worklow.
-ASaiM framework source code is available under Apache 2 license on
-<a href="https://github.com/asaim/framework">GitHub</a>. The code source includes
-customization of the Galaxy instance: automatic configuration, launch and provision
-with chosen tools, workflows and needed databases. </p>
+  functional results obtained with the previously described worklow.</p>
+
+<p>
+  ASaiM framework source code is available under Apache 2 license on
+  <a href="https://github.com/asaim/framework">GitHub</a>. The code source includes
+  customization of the Galaxy instance: automatic configuration, launch and provision
+  with chosen tools, workflows and needed databases.
+  <p align="center"><img src="assets/asaim_scheme.png" alt="ASaiM scheme"></p>
+</p>
 
 <h3>
 <a id="validation" class="anchor" href="#validation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Validation</h3>
