Add taxonomic results

--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@ accessible and sharable user-friendly tools. </p>
   to taxonomic results from EBI metagenomics pipelines, all genera found with
   ASaiM workflow correspond to expected genera. Despite previous differences,
   relative abundances of found all families are similar for both pipelines and
-  are correlated with expected abundances of these mock datasets. </p>
+  are correlated with expected abundances of these mock datasets.
+  <p align="center"><img src="assets/taxonomic_results.png" alt="Taxonomic results"></p>
+</p>
 
 <p>For functional analyses, ASaiM workflow uses HUMAnN2 [31] to extract relative
   abundance of gene families (UniRef50) and metabolic pathways (MetaCyc). In EBI
