End button and header make up

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
           <h1>Analyze your microbiota sequencing data using a Galaxy-based framework</h1>
           <br/>
           <h2><em><a href="http://bebatut.fr/">Bérénice Batut</a>, Clémence Defois, Kévin Gravouil, Cyrielle Gasc, Thomas Eymard, Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
+          <br/>
           <h3>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM 2016</a></h2>
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="assets/poster.pdf" id="download-pdf" class="button"><span>Download poster</span></a>
+          <a href="assets/poster.pdf" class="button"><span>Download poster</span></a>
           <a href="https://github.com/ASaiM/framework" class="button"><span>View on GitHub</span></a>
           <a href="http://asaim.readthedocs.io/en/latest/" class="button"><span>Check the docs</span></a>
         </section>
