--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <h1>Analyze your microbiota sequencing data using a Galaxy-based framework</h1>
           <br/>
           <h2><em><a href="http://bebatut.fr/">Bérénice Batut</a>, Clémence Defois, Kévin Gravouil, Cyrielle Gasc, Thomas Eymard, Eric Peyretaillade, Jean-François Brugère and Pierre Peyret</em></h2>
+          <h4>EA 4678 CIDAM, Université d'Auvergne, Clermont-Ferrand, France</h4>
           <br/>
           <h3>Poster presented at <a href="http://jobim2016.sciencesconf.org/">JOBIM 2016</a></h2>
         </header>
